# find-your-mate-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.toml
src/experiments/: playground.ipynb  retrieval_eval.ipynb  test-nodes.pkl
src/find_your_mate_ai/: data_ingestion.py  scraper.py
tests/: test_retriever.py
tests/data/: arjun-patel.md  avery-thompson.mdx  ethan-nguyen.mdx  liam-nakamura.md  sophie-muller.md
