[project]
name = "find-your-mate-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nehil Jain", email = "2761999+nehiljain@users.noreply.github.com"},
]
dependencies = [
    "playwright>=1.43.0",
    "pandas>=2.2.2",
    "jupyterlab>=4.2.0",
    "ipython>=8.24.0",
    "ipdb>=0.13.13",
    "python-dotenv>=1.0.1",
    "tdqm>=0.0.1",
    "unstructured>=0.13.6",
    "openai>=1.26.0",
    "tiktoken>=0.6.0",
    "instructor>=1.2.5",
    "html2text>=2024.2.26",
    "BeautifulSoup4>=4.12.3",
    "llama-index>=0.10.34",
    "pydantic>=2.7.1",
    "nltk>=3.8.1",
    "lancedb>=0.5.7",
    "datasets>=2.19.1",
    "llama-index-vector-stores-lancedb>=0.1.3",
    "dynaconf>=3.2.5",
    "typer>=0.12.3",
    "llama-index-storage-docstore-redis>=0.1.2",
    "pendulum>=3.0.0",
    "llama-index-storage-docstore-mongodb>=0.1.3",
    "llama-index-storage-index-store-mongodb>=0.1.2",
    "llama-index-llms-openai>=0.1.18",
    "llama-index-storage-kvstore-mongodb>=0.1.2",
    "pymongo>=4.7.2",
    "motor>=3.4.0",
    "pymongoarrow>=1.3.0",
    "llama-index-llms-ollama>=0.1.3",
    "matplotlib>=3.8.4",
    "cohere>=5.4.0",
    "thefuzz>=0.22.1",
    "llm>=0.13.1",
    "arize-phoenix[evals]>=4.0.2",
    "openinference-instrumentation-llama-index>=1.3.0",
    "llama-index-callbacks-arize-phoenix>=0.1.5",
    "deepeval>=0.21.41",
    "llama-index-vector-stores-pinecone>=0.1.7",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "llm>=0.13.1",
    "pre-commit>=3.7.0",
]
test = [
    "pytest-mock>=3.14.0",
    "pytest>=8.2.0",
    "ipdb>=0.13.13",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
